
[metadata]
name = dqlmagic
version = attr: dqlmagic.__version__
author = Patrick Thurner
author_email = patrick.thurner@dynatrace.com
url = https://github.com/dtPaTh/Dqlmagic
description = IPython magic function for Dynatrace Query Language (DQL)
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = Notebook, Jupyter, DQL, Dynatrace Query Language
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True

install_requires =
    ipython
    jupyter
    python-dotenv
    
